new dialogs for actions

--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -2,3 +2,7 @@
 /SignupDialog$1.class
 /SignupDialog$2.class
 /SignupDialog.class
+/InterceptDialog.class
+/AssassinationDialog.class
+/Homepage$5.class
+/Homepage$6.class
