added: when char is selected it's stats are displayed underneath

--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -6,3 +6,7 @@
 /AssassinationDialog.class
 /Homepage$5.class
 /Homepage$6.class
+/Homepage$1.class
+/Homepage$2.class
+/Homepage$3.class
+/Homepage$7.class
