working on sending messages

--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -10,3 +10,13 @@
 /Homepage$2.class
 /Homepage$3.class
 /Homepage$7.class
+/Homepage$8.class
+/ActionDialogue.class
+/Homepage$9.class
+/Homepage$10.class
+/Homepage$11.class
+/Homepage$12.class
+/ActionDialogue$1.class
+/MessageDialogue$1.class
+/MessageDialogue.class
+/MessageDialogue$2.class
