dialog classes for all action buttons + templates for req'd DB f'ns

--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -26,3 +26,17 @@
 /LeaderPopup.class
 /AssassinationDialog$1.class
 /AssassinationDialog$2.class
+/PaySpyDialog.class
+/FundPoliDialog.class
+/FundPoliDialog$1.class
+/FundPoliDialog$2.class
+/PaySpyDialog$1.class
+/PaySpyDialog$2.class
+/CampaignDialog.class
+/CampaignDialog$1.class
+/CampaignDialog$2.class
+/SpeechDialog.class
+/SpeechDialog$1.class
+/SpeechDialog$2.class
+/InterceptDialog$1.class
+/InterceptDialog$2.class
