filled in transaction

--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -42,3 +42,8 @@
 /InterceptDialog$2.class
 /PaySpyDialog$3.class
 /PaySpyDialog$4.class
+/Homepage.class
+/LoginDialog$1.class
+/LoginDialog$2.class
+/LoginDialog.class
+/TableView.class
